<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button 
        android:id="@+id/scan_qr_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_scan"/>  
      
    <Button 
        android:id="@+id/generate_qr_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_qr_btn"
        android:text="@string/qr_generate"/> 
        
	<Button
        android:id="@+id/acc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generate_qr_btn"
        android:layout_marginTop="20dp"
        android:text="@string/linear_acc"/> 

	<Button
        android:id="@+id/azimuth_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_btn"
        android:text="@string/azimuth"/> 
 
	<Button
        android:id="@+id/light_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/azimuth_btn"
        android:text="@string/light"/> 

	<Button
        android:id="@+id/pressure_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/light_btn"
        android:text="@string/pressure"/> 

</RelativeLayout>