<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    <LinearLayout 
        android:id="@+id/x_layout"
       	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<TextView 
		    android:id="@+id/x"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/x"/>
		
		<TextView 
		    android:id="@+id/x_result"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
		
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/y_layout"
       	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:orientation="horizontal">
		
		<TextView 
		    android:id="@+id/y"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/y"/>
		
		<TextView 
		    android:id="@+id/y_result"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
		
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/z_layout"
       	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:orientation="horizontal">
		
		<TextView 
		    android:id="@+id/z"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/z"/>
		
		<TextView 
		    android:id="@+id/z_result"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
		
	</LinearLayout>
	
    <Button 
        android:id="@+id/done_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
		    android:text="@string/done"/>
	
    
    
</LinearLayout>